--- a/static/files/resume.tex
+++ b/static/files/resume.tex
@@ -12,7 +12,7 @@
     linkcolor=black, % color of internal links
     citecolor=black, % color of citations
     filecolor=black, % color of file links
-    urlcolor=blue    % color of external links
+    urlcolor=teal    % color of external links
 }
 
 % Formatting for Section Titles
